# odoo-mcp-server

./: .gitignore  CHATGPT_DESKTOP_SETUP.md  CLAUDE_DESKTOP_SETUP.md  CLAUDE_USAGE_GUIDE.md  GITHUB_SETUP.md  QUICK_SETUP.md  README.md  claude-desktop-config.json  odoo-mcp-chatgpt-config.json  odoo-mcp-extension.json  pyproject.toml  quickstart.py  run_server.py  setup-chatgpt-desktop.sh  test-chatgpt-desktop.py  test_all_tools.py  test_config.py  test_from_any_directory.py  test_mcp_startup.py  test_odoo_client.py  test_operations.py  updated-claude-desktop-config.json
.github/: copilot-instructions.md
config/: .env.example
docs/: DEVELOPMENT.md
src/odoo_mcp/: __init__.py  client.py  config.py  server.py  tools.py
tests/: __init__.py  test_basic.py
